# python-project-lvl1

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  pre-commit.yml
brain_games/: cli.py
brain_games/scripts/: brain_games.py
