[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = ""
authors = ["Porodadestroyer <ruslan.savin.99@mail.ru>"]
packages = [
  { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "2.17.0"
black = "21.12b0"
mypy = "v0.931"
flake8 = "4.0.1"
pytest = "7.0.0"
isort = "5.10.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
